--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     display: grid;
     grid-template-rows: repeat(15, 1fr);
     grid-template-columns: repeat(15, 1fr);
-    grid-gap: 1px;
+    /* gap: 1px; */
     background-color: grey;
 }
 
@@ -40,7 +40,7 @@ body {
     display: grid;
     grid-template-rows: repeat(15, 1fr);
     grid-template-columns: repeat(15, 1fr);
-    grid-gap: 1px;
+    /* gap: 1px; */
 }
 
 .child {
